
Mon Dec 27 10:30:44 PST 1999
(Mandrake)

finally added the graphics for all the play/pause/etc buttons.  Still have
more cleaning to do in here.

---------------------------------------------------------------------------

Mon Dec 27 13:47:19 PST 1999
(Mandrake)

Hooked in all the menus correctly now.  Need to fix the preferences box to
actually work correctly, too.

---------------------------------------------------------------------------

Mon Dec 27 14:18:49 PST 1999
(Mandrake)

Hooked the other windows into their appropriate locations.

---------------------------------------------------------------------------

Mon Dec 27 15:01:57 PST 1999
(Mandrake)

Exit works now.  also closing the main window exits the app.
now you can only have 1 of each window open at a time, also.

---------------------------------------------------------------------------

Mon Dec 27 15:40:15 PST 1999
(Mandrake)

cleaned up a little bit of interface issues.  everything is kinda smoothing
out now.

---------------------------------------------------------------------------

Mon Dec 27 16:00:25 PST 1999
(Mandrake)

now you can actually move around the scales.

---------------------------------------------------------------------------

Mon Dec 27 18:01:49 PST 1999
(Mandrake)

Hooked in file loading, etc.  reduced the va logo as well as the initial size
of the window we're dealing with (it doesn't need to be huge after all).
Redid a little more layout, also.

---------------------------------------------------------------------------

Mon Dec 27 22:40:03 PST 1999
(Mandrake)

added license as well as copyright statements to all the files.

---------------------------------------------------------------------------

Wed Dec 29 14:23:22 PST 1999
(Mandrake)

added open using template dialog

---------------------------------------------------------------------------

Wed Dec 29 15:10:39 PST 1999
(Mandrake)

added movie info screen.