@@ -88,3 +88,10 @@ Wed Dec 29 15:10:39 PST 1999
 (Mandrake)
 
 added movie info screen.
+
+---------------------------------------------------------------------------
+
+Wed Dec 29 17:35:42 PST 1999
+(Mandrake)
+
+fixed preferences to actually align properly.  (need to fix text entry next)
